Correct view location found

--- a/lawfirm/src/main/resources/application.properties
+++ b/lawfirm/src/main/resources/application.properties
@@ -5,3 +5,4 @@ spring.datasource.url=jdbc:postgresql://aws-0-eu-central-1.pooler.supabase.com:5
 hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 #spring.datasource.username=postgres.rkqzmydzfametwfiumtk
 #spring.datasource.password=YnS5zXK*?4Uxv$v
+logging.level.org.springframework.web=DEBUG
