--- a/lawfirm/pom.xml
+++ b/lawfirm/pom.xml
@@ -32,10 +32,10 @@
 				<version>42.2.29 </version>
 			</dependency>
 
-		<!--<dependency>
+		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-security</artifactId>
-		</dependency> !-->
+		</dependency>
 
 
 		<dependency>
